# mcts

./: .gitignore  Makefile  pyproject.toml
mcts/: preprocessing.py  run.py  utils.py
scripts/: fetch_data.sh
